--- a/package.json
+++ b/package.json
@@ -16,5 +16,14 @@
   "bugs": {
     "url": "https://github.com/EduardoRotundaro/crud-api-express-mongo/issues"
   },
-  "homepage": "https://github.com/EduardoRotundaro/crud-api-express-mongo#readme"
+  "homepage": "https://github.com/EduardoRotundaro/crud-api-express-mongo#readme",
+  "dependencies": {
+    "body-parser": "^1.18.3",
+    "compression": "^1.7.3",
+    "cors": "^2.8.5",
+    "express": "^4.16.4",
+    "helmet": "^3.15.1",
+    "lodash": "^4.17.11",
+    "mongoose": "^5.4.17"
+  }
 }
